fix: Fix so it works on mobile aswell

--- a/src/styles/partials/_MyAccount.scss
+++ b/src/styles/partials/_MyAccount.scss
@@ -15,3 +15,14 @@
         margin-bottom: 1rem;
     }
 }
+
+@media only screen and (max-width: 600px){
+    .myAccountContainer{
+        width: 100%;
+        .myAccountTitle{
+            width: 80%;
+            margin: auto;
+            margin-bottom: 1rem
+        }
+    }
+}
